--- a/package.json
+++ b/package.json
@@ -6,16 +6,36 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "api": "json-server ./src/services/server.json --host 192.168.100.37 --port 3333 --delay 500"
   },
   "dependencies": {
+    "@expo-google-fonts/archivo": "^0.2.3",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@react-navigation/native": "^6.1.5",
+    "@react-navigation/native-stack": "^6.9.11",
+    "axios": "^1.3.4",
     "expo": "~48.0.4",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "styled-components": "^5.3.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.71.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.1",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
