--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
-    "@react-navigation/native": "^6.1.5",
-    "@react-navigation/native-stack": "^6.9.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "expo": "~48.0.4",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-uuid": "^2.0.1",
     "styled-components": "^5.3.7"
   },
   "devDependencies": {
@@ -35,6 +40,8 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.5"
   },
   "private": true
