--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,32 @@
 {
-    "extends": "@tsconfig/react-native/tsconfig.json",
+  
+    // "extends": "@tsconfig/react-native/tsconfig.json",
+    "extends": "expo/tsconfig.base",
     "compilerOptions": {
-      "strict": true,
-      "experimentalDecorators": true
+      // "strict": false,
+      // "suppressImplicitAnyIndexErrors": true,
+      "experimentalDecorators": true,
+      // "isolatedModules": false,
+
+
+
+        // "target": "esnext",
+        // "module": "commonjs",
+        // "lib": [
+        //     "es2017"
+        // ],
+        // "allowJs": true,
+        // "jsx": "react-native",
+        // "noEmit": true,
+        // "isolatedModules": true,
+        // "strict": true,
+        // "moduleResolution": "node",
+        // "allowSyntheticDefaultImports": true,
+        // "forceConsistentCasingInFileNames": true,
+        // "esModuleInterop": true,
+        // "skipLibCheck": true,
+        // "resolveJsonModule": true,
+        // "baseUrl": "./",
     }
+    // "noImplicitAny": true,
 }
