--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react-native-calendars": "1.1264.3",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "expo": "~48.0.4",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -29,7 +32,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
-    "styled-components": "^5.3.7"
+    "styled-components": "^5.3.7",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
